--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
