--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.47.0",
     "@tabler/icons-react": "^3.25.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.5.1",
     "next": "^14.2.0",
     "react": "^18.3.1",
