--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.5.1",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
